# Ckollatz

./: CMakeLists.txt  Collatz.cpp  Collatz.h  Graph.cpp  Graph.h  PlotPoints.h  Point.h  README.md  Rect.cpp  Rect.h  Utilities.cpp  Window.cpp  Window.h  a.out  main.cpp
